--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -108,6 +108,8 @@
  
 \subfile{chapter/interprete/interprete.tex}
 
+\subfile{chapter/wasm/wasm.tex}
+
 \subfile{chapter/conclusioni/conclusioni.tex}
 
 \addcontentsline{toc}{chapter}{Bibliografia}
