update code snippets wasm code

--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -91,6 +91,16 @@
                      {epsilon}{$\epsilon$}{1}
 }
 
+
+\lstdefinelanguage{WebAssembly}{
+    keywords={func, param, result},
+    keywordstyle=\color{blue}\bfseries,
+    morecomment=[l]{;},
+    morecomment=[s]{/*}{*/},
+    morestring=[b]",
+    sensitive=true
+}
+
 \lstset{style=mystyle}
 \graphicspath{ {./img/} }
 
