bug fixed in forNode and check grammar in Thesis

--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -42,6 +42,20 @@
     showtabs=false,                  
     tabsize=2
 }
+\lstdefinelanguage{JavaScript}{
+  keywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break},
+  keywordstyle=\color{blue}\bfseries,
+  ndkeywords={class, export, boolean, throw, implements, import, this},
+  ndkeywordstyle=\color{darkgray}\bfseries,
+  identifierstyle=\color{black},
+  sensitive=false,
+  comment=[l]{//},
+  morecomment=[s]{/*}{*/},
+  commentstyle=\color{purple}\ttfamily,
+  stringstyle=\color{red}\ttfamily,
+  morestring=[b]',
+  morestring=[b]"
+}
 
 \newcommand{\bigfract}[2]{\frac{^{\textstyle #1}}{_{\textstyle #2}}}
 \newcommand{\rulename}[1]{{\small {\sc[#1]}}}
