add improvement to resolve equation cost and upgrade tesi

--- a/tesi/Bibliography.bib
+++ b/tesi/Bibliography.bib
@@ -1,8 +1,3 @@
-@article{deserverless,
-  title={Serverless Scheduling Policies based on Cost Analysis},
-  author={De Palma, Giuseppe and Giallorenzo, Saverio and Laneve, Cosimo and Mauro, Jacopo and Trentin, Matteo and Zavattaro, Gianluigi}
-}
-
 @inproceedings{de2020allocation,
   title={Allocation priority policies for serverless function-execution scheduling optimisation},
   author={De Palma, Giuseppe and Giallorenzo, Saverio and Mauro, Jacopo and Zavattaro, Gianluigi},
@@ -30,7 +25,7 @@
   organization={Springer}
 }
 
-@phdthesis{amslaurea24930,
+@thesis{amslaurea24930,
           author = {Matteo Trentin},
            title = {Topology-based Scheduling in Serverless Computing Platforms},
         keywords = {serverless,FaaS,OpenWhisk,OpenFaaS,Fission,scheduling,cloud computing},
@@ -51,4 +46,27 @@
   pages={33--55},
   year={2022},
   publisher={Springer}
+}
+
+@inproceedings{deserverless,
+  author       = {Giuseppe De Palma and
+                  Saverio Giallorenzo and
+                  Cosimo Laneve and
+                  Jacopo Mauro and
+                  Matteo Trentin and
+                  Gianluigi Zavattaro},
+  editor       = {Maurice H. ter Beek and
+                  Clemens Dubslaff},
+  title        = {Serverless Scheduling Policies based on Cost Analysis},
+  booktitle    = {Proceedings of the First Workshop on Trends in Configurable Systems
+                  Analysis, TiCSA@ETAPS 2023, Paris, France, 23rd April 2023},
+  series       = {{EPTCS}},
+  volume       = {392},
+  pages        = {40--52},
+  year         = {2023},
+  url          = {https://doi.org/10.4204/EPTCS.392.3},
+  doi          = {10.4204/EPTCS.392.3},
+  timestamp    = {Mon, 06 Nov 2023 15:17:28 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2310-20391.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
