Add chapter  "Conclusioni" in tesi

--- a/tesi/Bibliography.bib
+++ b/tesi/Bibliography.bib
@@ -1,28 +1,70 @@
 @inproceedings{de2020allocation,
-  title={Allocation priority policies for serverless function-execution scheduling optimisation},
-  author={De Palma, Giuseppe and Giallorenzo, Saverio and Mauro, Jacopo and Zavattaro, Gianluigi},
-  booktitle={Service-Oriented Computing: 18th International Conference, ICSOC 2020, Dubai, United Arab Emirates, December 14--17, 2020, Proceedings 18},
-  pages={416--430},
-  year={2020},
-  organization={Springer}
+  author       = {Giuseppe De Palma and
+                  Saverio Giallorenzo and
+                  Jacopo Mauro and
+                  Gianluigi Zavattaro},
+  editor       = {Eleanna Kafeza and
+                  Boualem Benatallah and
+                  Fabio Martinelli and
+                  Hakim Hacid and
+                  Athman Bouguettaya and
+                  Hamid Motahari},
+  title        = {Allocation Priority Policies for Serverless Function-Execution Scheduling
+                  Optimisation},
+  booktitle    = {Service-Oriented Computing - 18th International Conference, {ICSOC}
+                  2020, Dubai, United Arab Emirates, December 14-17, 2020, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {12571},
+  pages        = {416--430},
+  publisher    = {Springer},
+  year         = {2020},
+  url          = {https://doi.org/10.1007/978-3-030-65310-1\_29},
+  doi          = {10.1007/978-3-030-65310-1\_29},
+  timestamp    = {Fri, 09 Apr 2021 18:46:48 +0200},
+  biburl       = {https://dblp.org/rec/conf/icsoc/PalmaGMZ20.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
 @inproceedings{flores2014resource,
-  title={Resource analysis of complex programs with cost equations},
-  author={Flores-Montoya, Antonio and H{\"a}hnle, Reiner},
-  booktitle={Programming Languages and Systems: 12th Asian Symposium, APLAS 2014, Singapore, Singapore, November 17-19, 2014, Proceedings 12},
-  pages={275--295},
-  year={2014},
-  organization={Springer}
+  author       = {Antonio Flores{-}Montoya and
+                  Reiner H{\"{a}}hnle},
+  editor       = {Jacques Garrigue},
+  title        = {Resource Analysis of Complex Programs with Cost Equations},
+  booktitle    = {Programming Languages and Systems - 12th Asian Symposium, {APLAS}
+                  2014, Singapore, November 17-19, 2014, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {8858},
+  pages        = {275--295},
+  publisher    = {Springer},
+  year         = {2014},
+  url          = {https://doi.org/10.1007/978-3-319-12736-1\_15},
+  doi          = {10.1007/978-3-319-12736-1\_15},
+  timestamp    = {Tue, 14 May 2019 10:00:41 +0200},
+  biburl       = {https://dblp.org/rec/conf/aplas/Flores-MontoyaH14.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
 @inproceedings{albert2008automatic,
-  title={Automatic inference of upper bounds for recurrence relations in cost analysis},
-  author={Albert, Elvira and Arenas, Puri and Genaim, Samir and Puebla, Germ{\'a}n},
-  booktitle={Static Analysis: 15th International Symposium, SAS 2008, Valencia, Spain, July 16-18, 2008. Proceedings 15},
-  pages={221--237},
-  year={2008},
-  organization={Springer}
+  author       = {Elvira Albert and
+                  Puri Arenas and
+                  Samir Genaim and
+                  German Puebla},
+  editor       = {Maria Alpuente and
+                  German Vidal},
+  title        = {Automatic Inference of Upper Bounds for Recurrence Relations in Cost
+                  Analysis},
+  booktitle    = {Static Analysis, 15th International Symposium, {SAS} 2008, Valencia,
+                  Spain, July 16-18, 2008. Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {5079},
+  pages        = {221--237},
+  publisher    = {Springer},
+  year         = {2008},
+  url          = {https://doi.org/10.1007/978-3-540-69166-2\_15},
+  doi          = {10.1007/978-3-540-69166-2\_15},
+  timestamp    = {Mon, 03 Jan 2022 22:21:24 +0100},
+  biburl       = {https://dblp.org/rec/conf/sas/AlbertAGP08.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
 @thesis{amslaurea24930,
