--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -125,13 +125,15 @@
 
 \subfile{chapter/frontespizio.tex}
 
+\pagestyle{headings} 
+
 \clearpage
 
 \tableofcontents
 
-\listoffigures
+\renewcommand\lstlistlistingname{Indice di Codice}
 
-\lstlistoflistings[title={List of Code}]
+\lstlistoflistings
 
 \subfile{chapter/introduzione/Introduzione.tex}
 
