add pubs ces equation

--- a/tesi/Bibliography.bib
+++ b/tesi/Bibliography.bib
@@ -112,3 +112,9 @@
   biburl       = {https://dblp.org/rec/journals/corr/abs-2310-20391.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@phdthesis{amslaurea3135,
+           title = {Strumenti per l'analisi del tempo di esecuzione},
+          author = {Sara Bergonzoni},
+             url = {http://amslaurea.unibo.it/3135/}
+}
