--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -12,6 +12,7 @@
 \usepackage{amssymb}
 \usepackage{xcolor}
 \usepackage{subfiles}
+\usepackage{amsthm} % Add the necessary package to define the "definition" environment
 \usepackage{listings}
 \usepackage{amsmath}
 \usepackage[toc,page]{appendix}
