--- a/tesi/Bibliography.bib
+++ b/tesi/Bibliography.bib
@@ -118,3 +118,49 @@
           author = {Sara Bergonzoni},
              url = {http://amslaurea.unibo.it/3135/}
 }
+
+@phdthesis{amslaurea2372,
+          author = {Stefano Pascali},
+           title = {Definizione di una grammatica per il linguaggio Jolie},
+             url = {http://amslaurea.unibo.it/2372/},
+        keywords = {JOLIE ANTLR}
+}
+
+@article{antlrllkparser,
+  author       = {Terence John Parr and
+                  Russell W. Quong},
+  title        = {{ANTLR:} {A} Predicated- \emph{ LL(k) } Parser Generator},
+  journal      = {Softw. Pract. Exp.},
+  volume       = {25},
+  number       = {7},
+  pages        = {789--810},
+  year         = {1995},
+  url          = {https://doi.org/10.1002/spe.4380250705},
+  doi          = {10.1002/SPE.4380250705},
+  timestamp    = {Thu, 09 Apr 2020 17:14:33 +0200},
+  biburl       = {https://dblp.org/rec/journals/spe/ParrQ95.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@phdthesis{amslaurea20464,
+          author = {Marco Aspromonte},
+           title = {Studio del WebAssembly e sperimentazioni con Emscripten},
+        abstract = {L'elaborato {\`e} volto allo studio dello standard WebAssembly, delle sue specifiche di implementazione e applicazione nel mondo delle Tecnologie Web moderne. Grazie alla sua architettura e alla portabilit{\`a} che offre in termini di esecuzione multi-piattaforma, il WebAssembly pu{\`o} acquisire enormi potenzialit{\`a} dal punto di vista dello sviluppo delle applicazioni web, poich{\`e} consente una riscrittura del codice nativo (C e C++) in linguaggi eseguibili e interpretabili dal browser, quali Javascript e Html. In questo modo, qualsiasi software o applicazione scritta in codice nativo pu{\`o} essere integrata in una web app  ed eseguita da un browser. Ovviamente per le applicazioni pi{\`u} complesse il lavoro {\`e} molto pi{\`u} complesso che per semplici script di stampa o piccoli input dall'utente, ma lo standard ha vita da soli 5 anni, lasciando una prospettiva di ampio sviluppo nel futuro.},
+        keywords = {WebAssembly,Emscripten,compilatori,portabilit{\`a},tecnologie web,linguaggi di programmazione,formato,stack machine},
+             url = {http://amslaurea.unibo.it/20464/}
+}
+
+@article{DBLP:journals/corr/abs-2205-01183,
+  author       = {Ben L. Titzer},
+  title        = {A fast in-place interpreter for WebAssembly},
+  journal      = {CoRR},
+  volume       = {abs/2205.01183},
+  year         = {2022},
+  url          = {https://doi.org/10.48550/arXiv.2205.01183},
+  doi          = {10.48550/ARXIV.2205.01183},
+  eprinttype    = {arXiv},
+  eprint       = {2205.01183},
+  timestamp    = {Thu, 05 May 2022 15:47:51 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2205-01183.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
