--- a/tesi/Bibliography.bib
+++ b/tesi/Bibliography.bib
@@ -164,3 +164,24 @@
   biburl       = {https://dblp.org/rec/journals/corr/abs-2205-01183.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{niemela2021webassembly,
+  title={WebAssembly, Fourth Language in the Web},
+  author={Niemel{\"a}, Vili-Petteri},
+  year={2021}
+}
+
+@book{DBLP:books/aw/AhoSU86,
+  author       = {Alfred V. Aho and
+                  Ravi Sethi and
+                  Jeffrey D. Ullman},
+  title        = {Compilers: Principles, Techniques, and Tools},
+  series       = {Addison-Wesley series in computer science / World student series edition},
+  publisher    = {Addison-Wesley},
+  year         = {1986},
+  url          = {https://www.worldcat.org/oclc/12285707},
+  isbn         = {0-201-10088-6},
+  timestamp    = {Fri, 17 Jul 2020 16:12:45 +0200},
+  biburl       = {https://dblp.org/rec/books/aw/AhoSU86.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
