--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -132,9 +132,12 @@
 
 \tableofcontents
 
+\listoffigures
+
 \renewcommand\lstlistlistingname{Indice di Codice}
 
 \lstlistoflistings
+
 
 \subfile{chapter/introduzione/Introduzione.tex}
 
