--- a/tesi/Bibliography.bib
+++ b/tesi/Bibliography.bib
@@ -185,3 +185,9 @@
   biburl       = {https://dblp.org/rec/books/aw/AhoSU86.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@book{mogensen2010basics,
+  title={Basics of compiler design},
+  author={Mogensen, Torben {\AE}gidius},
+  year={2010}
+}
